--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         </ol>
         
         <h2>WEB</h2>
+
+        Hello
         
         <p>
             <a href="https://www.w3.org/" target="_blank" title="w3c">W3C</a> invites public feedback on a beta release of the W3C website redesign. The new site features a cleaner and more modern look, a simplified information architecture, improved accessibility, and more integration throughout the site. Once the beta of the English site has concluded, we will offer sites in Japanese and Chinese.
